<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/album_image"
            android:layout_width="match_parent"
            android:layout_height="416dp"
            android:layout_gravity="top"
            android:contentDescription="@string/todo"
            android:src="@drawable/song_icon" />


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/song_icon"
            android:text="@string/radio_palmares"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/CP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/song_icon"
            android:text="@string/paraguay"
            android:textColor="@color/design_default_color_secondary"

            android:textSize="25sp" />

        <TextView
            android:id="@+id/Genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/song_icon"
            android:text="@string/musica_cristiana_24_7"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="12dp"

            android:text="@string/play" />

        <Button
            android:id="@+id/buttonPause"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="12dp"

            android:gravity="center"
            android:text="@string/pause" />


    </LinearLayout>


</LinearLayout>